# mewow-dict

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
assets/web/: index.html
resources/mdx/: .gitattributes  牛津高阶英汉双解词典（第9版）.mdd  牛津高阶英汉双解词典（第9版）.mdx  牛津高阶英汉双解词典（第9版）.mdx.db  韦氏高阶英汉双解词典v3.mdx.db
resources/mdx/en/: .gitattributes  韦氏高阶英汉双解词典v3.mdd  韦氏高阶英汉双解词典v3.mdx
resources/static/: index.css  index.js
src/: main.rs
src/config/: mod.rs
src/indexing/: mod.rs
src/query/: mod.rs
