[package]
name = "mewow-dict"
version = "0.1.3"
authors = ["zhimoe","czyt"]
edition = "2021"


[dependencies]
# error handling
anyhow = "1"

pretty_env_logger = "0.5.0"
log = "0.4"
serde_derive = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

actix-web = "4"
actix-files = "0.6"

nom = "8"
encoding = "0.2"

adler32 = "1"
regex = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
flate2 = { version = "1", features = ["zlib"], default-features = false }
rand = "0.8"
minilzo-rs = "0.6"
ripemd = "0.1.3"
once_cell = "1"
